# TinyMMO

./: .gitignore  README.md  TinyMMO.csproj  TinyMMO.sln  project.godot  test.json
.github/workflows/: dotnet.yml
.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  playa.png-57d1cb251bc188b4584921304683005e.md5  playa.png-57d1cb251bc188b4584921304683005e.stex  playa.png-b2f590479ac190dc211d9e9eb0ea41bf.md5  tileset.png-a39e944f25b35d62f55d4f98a36e2b5e.md5  tileset.png-a39e944f25b35d62f55d4f98a36e2b5e.stex  walltiles.png-197d0d6ab8ab34100586e17564e2054f.md5  walltiles.png-197d0d6ab8ab34100586e17564e2054f.stex  walltiles.png-31cad3ee8f5538604392848d3153fb34.md5  walltiles.png-31cad3ee8f5538604392848d3153fb34.stex
.mono/metadata/: ide_messaging_meta.txt  scripts_metadata.editor  scripts_metadata.editor_player
assets/: SHINKAI DEV.png.import  bat_angry.png.import  dialoguebox1.png.import  light2d.png.import  loading-dot.png.import  loading.png.import  tinyMMOBackground.jpg.import  tinyMMOBackground2.jpg.import  walltiles.png.import
assets/backgrounds/: tinyMMOBackground.jpg.import  (+2 more)
game/: .gitignore  TinyMMO.csproj  icon.png.import  project.godot
scenes/: Camera.tscn  Dialogue.cs  Dialogue.tscn  Enemy.tscn  GameController.tscn  Network.cs  Playa.tscn  Player.tscn  Server.tscn  ServerView.tscn  Weapons.tscn  World.tscn  menuPrin.tscn  tinyMMOBackground3.png.import
scripts/: Combat.cs  Health.cs
server/: Cargo.toml
server/src/: event.rs  log.rs  main.rs  objects.rs  peer_input.rs  state.rs
themes/: UI.tres
(+90 files in other folders)
