[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
tungstenite = "0.19.0"
tokio-tungstenite = "*"
serde_json = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0.9"
rand = "0.8.5"
futures-channel = "0.3.27"
once_cell = "1.17.1"
strum = "0.25.0"
strum_macros = "0.25"
